small fix to spacing on responsive list pages
and make CI & Netlify use a newest version of Go (required for modules)

--- a/assets/sass/pages/_list.scss
+++ b/assets/sass/pages/_list.scss
@@ -24,6 +24,7 @@ main#list {
     li {
       display: flex;
       letter-spacing: -0.011em;
+      line-height: 1.75;
 
       div.date {
         color: $color-medium;
@@ -32,7 +33,7 @@ main#list {
       }
 
       + li {
-        margin-top: 1.3em;
+        margin-top: 1em;
       }
 
       &:last-child {
