--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -26,7 +26,7 @@ main#single {
     margin-top: 0.3em;
     margin-bottom: 0.5em;
     font-size: 2.2em;
-    line-height: 1.25;
+    line-height: 1.3;
     font-weight: 700;
 
     a {
@@ -52,6 +52,7 @@ main#single {
     padding: 0.8em 1.1em;
 
     h1#title {
+      margin-top: 0.5em;
       font-size: 1.8em;
     }
 
